# EnsembleDdosDetection

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml  train.py
ensemble_ddos_detection/: config.py
ensemble_ddos_detection/data/: loader.py  preprocessor.py
ensemble_ddos_detection/evaluation/: metrics.py
ensemble_ddos_detection/export/: exporter.py
ensemble_ddos_detection/models/: autoencoder.py  isolation_forest.py  one_class_svm.py  q_ensemble.py
ensemble_ddos_detection/training/: trainer.py
models/exported/: autoencoder.pt  ensemble_config.json  isolation_forest.pkl  normalization_params.json  one_class_svm.pkl  scaler.json  scaler.pkl
models/exported/onnx/: autoencoder.onnx  autoencoder.onnx.data  ensemble_config.json  isolation_forest.onnx  normalization_params.json  one_class_svm.onnx
outputs/: test_metrics.json
src/: capture.rs  config.rs  features.rs  flow.rs  inference.rs  main.rs  preprocess.rs
src/test/: mod.rs  test_config.rs  test_features.rs  test_flow.rs  test_inference.rs  test_preprocess.rs
src/tui/: app.rs  event.rs
src/tui/collectors/: config.rs  connections.rs  geo.rs  health.rs  insights.rs  mod.rs  packets.rs  traffic.rs  whois.rs
src/tui/platform/: macos.rs  windows.rs
src/tui/ui/: connections.rs  dashboard.rs  ddos_logs.rs  help.rs  insights.rs  interfaces.rs  mod.rs  packets.rs  stats.rs  timeline.rs  topology.rs
